# ycomb-parser

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/: main.py
app/database/: __init__.py  database.py  types.py
app/routes/: __init__.py  comments.py  sentiment.py
app/ycomb/: __init__.py  parser.py  sentiment.py  ytypes.py
deployment/: app.Dockerfile  docker-compose.yml
deployment/migrations/: env.py
deployment/migrations/versions/: 1ce5ff96ae43_added_initial_tables.py
tests/: conftest.py  test_parser.py
tests/app/: test_routes.py
