[tool.poetry]
name = "ycomb-parser"
version = "0.1.0"
description = ""
authors = ["Alex <42418433+aiexz@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ycomb_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
aiohttp = "^3.8.3"
beautifulsoup4 = "^4.11.2"
aiosqlite = "^0.18.0"
SQLAlchemy = "^2.0.2"
alembic = "^1.9.4"


[tool.poetry.group.sentiment.dependencies]
transformers = "^4.26.1"
torch = "^1.13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
httpx = "^0.23.3"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
